--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /*  your css code here. If applicable */
 table{
-	background: yellow
+	background: yellow;
+	border:1px solid rgb(0, 0, 0);
 }
 th,tr,td{
-	border: 1px solid black
+	border: 1px solid rgb(0, 0, 0)
 }
